<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D3D3D3">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Subtitle1"
        android:textColor="#000000"
        android:textStyle="bold"
        android:id="@+id/Subtle1"
        android:textSize="25dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tips"
        android:layout_below="@+id/Subtle1"
        android:textColor="#000000"
        android:id="@+id/tips1"
        android:textSize="20dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Subtitle2"
        android:layout_below="@+id/tips1"
        android:textColor="#000000"
        android:id="@+id/Subtle2"
        android:textStyle="bold"
        android:textSize="30dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Qes1"
        android:layout_below="@+id/Subtle2"
        android:textColor="#000000"
        android:textStyle="bold"
        android:id="@+id/Question1"
        android:textSize="22dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Answ1"
        android:layout_below="@+id/Question1"
        android:textColor="#000000"
        android:textStyle="normal"
        android:id="@+id/Ans1"
        android:textSize="20dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Qes2"
        android:layout_below="@+id/Ans1"
        android:textColor="#000000"
        android:textStyle="bold"
        android:id="@+id/Question2"
        android:textSize="22dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Answ2"
        android:layout_below="@+id/Question2"
        android:textColor="#000000"
        android:textStyle="normal"
        android:id="@+id/Ans2"
        android:textSize="20dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Qes3"
        android:layout_below="@+id/Ans2"
        android:textColor="#000000"
        android:textStyle="bold"
        android:id="@+id/Question3"
        android:textSize="22dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Answ3"
        android:layout_below="@+id/Question3"
        android:textColor="#000000"
        android:textStyle="normal"
        android:id="@+id/Ans3"
        android:textSize="20dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Qes4"
        android:layout_below="@+id/Ans3"
        android:textColor="#000000"
        android:textStyle="bold"
        android:id="@+id/Question4"
        android:textSize="22dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Answ4"
        android:layout_below="@+id/Question4"
        android:textColor="#000000"
        android:textStyle="normal"
        android:id="@+id/Ans4"
        android:textSize="20dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Qes5"
        android:layout_below="@+id/Ans4"
        android:textColor="#000000"
        android:textStyle="bold"
        android:id="@+id/Question5"
        android:textSize="22dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Answ5"
        android:layout_below="@+id/Question5"
        android:textColor="#000000"
        android:textStyle="normal"
        android:id="@+id/Ans5"
        android:textSize="20dp"/>

</RelativeLayout>
</ScrollView>